Puppet server foreground